changes from 0.1.0 to 0.2.0:

2003-10-26 Tilo Riemer <riemer@lincvs.org>

	* fixed: now you can use numerical indexes 
	for temperature() and friends()
	* changed: cleanups
	
2003-08-25 Tilo Riemer <riemer@lincvs.org>

	* fixed: some bugs
	
2003-08-22 Tilo Riemer <riemer@lincvs.org>

	* changed: cleanups
	
2003-08-19 Tilo Riemer <riemer@lincvs.org>

	* added: identity and version functions

2003-08-18 Luc Sorgue <luc.sorgue@laposte.net>

	* fixed: some bugs
	* changed: exception handling
	
2003-08-18 Tilo Riemer <riemer@lincvs.org>

	* fixed (Linux): some systems (for instance MDK 9.1) are 
	identified as linux instead of linux2; a workaround is 
	added but it will not work for Linux < 2.x ;-)

2003-08-15 Tilo Riemer <riemer@lincvs.org>

	* fixed: some bugs
	
2003-08-14 Tilo Riemer <riemer@lincvs.org>

	* changed: code restructured
	* changed: exception stuff cleaned
	
2003-08-13 Tilo Riemer <riemer@lincvs.org>

	* changed: reworking for feature test started
	
2003-08-05 Tilo Riemer <riemer@lincvs.org>

	* changed: error handling improved for setFrequency
	* changed: setFrequency renamed to set_frequency	
	
2003-07-22 Luc Sorgue <luc.sorgue@laposte.net>

	* added: ability to read and write processor frequency
	
2003-07-02 Luc Sorgue <luc.sorgue@laposte.net>

	* fixed: some fixes
	* added: fan states
	
2003-07-01 Luc Sorgue <luc.sorgue@laposte.net>

	* changed: nb_of_batteries counts batteries which are 
	really present (later skipped again)
	* added: estimated_lifetime shows the estimated lifetime
	of the batteries.
	
2003-06-30 Luc Sorgue <luc.sorgue@laposte.net>

	* fixed: small bugs