@@ -12,7 +12,7 @@ print "ac-adapter : " + str(myAcpi.charging_state())
 print "nb batteries : " + str(myAcpi.nb_of_batteries())
 print "charge: " + str(myAcpi.capacity())
 print "percent: " + str(myAcpi.percent())
-print "lifetime: " + myAcpi.estimated_lifetime()
+print "lifetime: " + str(myAcpi.estimated_lifetime())
 print "temperature: "+ str(myAcpi.temperature("THRM"))
 #print "Frequency: "+ myAcpi.frequency(0)
 #print "Available freqencies: "+str(myAcpi.performance_states(0))
